syntax = "proto3";

package ThermalPowerPlantPackage;

service PresentationService {
  rpc Introduce (IntroductionRequest) returns (IntroductionResponse);
}

message IntroductionRequest {
  int32 id = 1; // ID centrale
  string ip = 2;
  int32  port = 3;
}

message IntroductionResponse {
  bool success = 1;
}